--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-swipeable": "^7.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
